# anycli

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  IMPROVEMENTS.md  README.md  TODO.md  UPGRADE_SUMMARY.md  learning_data.json  rag_data.json
crates/cuc-aws/: Cargo.toml
crates/cuc-aws/src/: lib.rs
crates/cuc-azure/: Cargo.toml
crates/cuc-azure/src/: lib.rs
crates/cuc-cli/: Cargo.toml
crates/cuc-cli/src/: command_learning.rs  lib.rs  quality_analyzer.rs  tests.rs  translator.rs  ui.rs
crates/cuc-cli/src/snapshots/: cuc_cli__tests__snapshot_tests__command_corrections.snap  cuc_cli__tests__snapshot_tests__command_corrections.snap.new
crates/cuc-core/: Cargo.toml
crates/cuc-core/src/: cloud_provider.rs  document_indexer.rs  lib.rs  llm.rs  rag.rs  types.rs  vector_store.rs
crates/cuc-gcp/: Cargo.toml
crates/cuc-gcp/src/: lib.rs
crates/cuc-ibmcloud/: Cargo.toml
crates/cuc-ibmcloud/src/: lib.rs
crates/cuc-rag/: Cargo.toml
crates/cuc-rag/src/: document_indexer.rs  engine.rs  lib.rs  tests.rs  vector_store.rs
crates/cuc-rag/src/snapshots/: cuc_rag__tests__snapshot_tests__indexing_result.snap  cuc_rag__tests__snapshot_tests__rag_retrieve_result.snap  cuc_rag__tests__snapshot_tests__rag_retrieve_result.snap.new  cuc_rag__tests__snapshot_tests__vector_store_search_results.snap
crates/cuc-vmware/: Cargo.toml
crates/cuc-vmware/src/: lib.rs
crates/cuc-watsonx/: Cargo.toml
crates/cuc-watsonx/src/: client.rs  config.rs  lib.rs  tests.rs
docs/: index.html
src/: command_learning.rs  local_rag.rs  local_vector_store.rs  main.rs  quality_analyzer.rs  translator.rs  vector_store.rs  watsonx_adapter.rs
src/application/: code_engine_use_cases.rs  mod.rs  use_cases.rs
src/cli/: command_learning.rs  intent_detector.rs  mod.rs  quality_analyzer.rs  tests.rs  translator.rs  ui.rs
src/cli/snapshots/: anycli__cli__tests__snapshot_tests__command_corrections.snap  anycli__cli__tests__snapshot_tests__command_corrections.snap.new  anycli__cli__tests__snapshot_tests__quality_analysis_empty_command.snap  anycli__cli__tests__snapshot_tests__quality_analysis_error_command.snap  anycli__cli__tests__snapshot_tests__quality_analysis_incomplete_command.snap  anycli__cli__tests__snapshot_tests__quality_analysis_login_sso_command.snap  anycli__cli__tests__snapshot_tests__quality_validations.snap  anycli__cli__tests__snapshot_tests__similar_commands.snap  cuc_cli__tests__snapshot_tests__command_corrections.snap  cuc_cli__tests__snapshot_tests__quality_analysis_empty_command.snap  cuc_cli__tests__snapshot_tests__quality_analysis_error_command.snap  cuc_cli__tests__snapshot_tests__quality_analysis_incomplete_command.snap  cuc_cli__tests__snapshot_tests__quality_analysis_long_command.snap  cuc_cli__tests__snapshot_tests__quality_validations.snap  cuc_cli__tests__snapshot_tests__similar_commands.snap
src/core/: cloud_provider.rs  document_indexer.rs  error.rs  llm.rs  mod.rs  rag.rs  vector_store.rs
src/domain/: code_engine.rs  entities.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
src/infrastructure/: adapters.rs  code_engine_deployment.rs  mod.rs  repositories.rs  services.rs
src/legacy/: document_indexer.rs  local_document_indexer.rs  main_old.rs  rag.rs  vector_store.rs
src/legacy/watsonx/: mod.rs
src/providers/: aws.rs  azure.rs  gcp.rs  ibmcloud.rs  mod.rs  vmware.rs
src/rag/: document_indexer.rs  engine.rs  mod.rs  tests.rs  vector_store.rs
src/rag/snapshots/: anycli__rag__tests__snapshot_tests__indexing_result.snap  anycli__rag__tests__snapshot_tests__rag_context.snap  anycli__rag__tests__snapshot_tests__rag_retrieve_result.snap  anycli__rag__tests__snapshot_tests__rag_retrieve_result.snap.new  anycli__rag__tests__snapshot_tests__vector_store_search_results.snap  cuc_rag__tests__snapshot_tests__rag_context.snap
src/watsonx/: mod.rs
