[package]
name = "ibmcloud-cli-ai"
version = "0.1.0"
edition = "2021"
description = "AI-powered IBM Cloud CLI that translates natural language to IBM Cloud commands"

[[bin]]
name = "icx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
colored = "2.0"
regex = "1.9"
futures = "0.3"
crossterm = "0.27"
# Vector database and embedding dependencies (optional)
qdrant-client = "1.7"
uuid = { version = "1.0", features = ["v4"] }
scraper = "0.18"
md5 = "0.7"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
base64 = "0.21"