[workspace]
members = [
    "crates/cuc-core",
    "crates/cuc-watsonx",
    "crates/cuc-rag",
    "crates/cuc-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["IBM Cloud CLI AI Team"]
license = "MIT"
repository = "https://github.com/watsonx-apac/ibmcloud-cli-ai"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
crossterm = "0.28"

# Configuration
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# Text processing
regex = "1.11"
pulldown-cmark = "0.12"

# Vector database
qdrant-client = "1.12"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Web scraping
scraper = "0.21"

# Utilities
md5 = "0.7"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.14"
base64 = "0.22"

# Testing
insta = { version = "1.41", features = ["yaml", "redactions"] }

[package]
name = "ibmcloud-cli-ai"
version.workspace = true
edition.workspace = true
description = "AI-powered IBM Cloud CLI that translates natural language to IBM Cloud commands"

[[bin]]
name = "icx"
path = "src/main.rs"

[dependencies]
# Workspace crates
cuc-core = { path = "crates/cuc-core" }
cuc-watsonx = { path = "crates/cuc-watsonx" }
cuc-rag = { path = "crates/cuc-rag" }
cuc-cli = { path = "crates/cuc-cli" }

# External dependencies
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
colored = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
crossterm = { workspace = true }
qdrant-client = { workspace = true }
uuid = { workspace = true }
scraper = { workspace = true }
md5 = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
insta = { workspace = true }