[workspace]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["AnyCLI Team"]
license = "Apache 2.0"
repository = "https://github.com/yingkitw/anycli"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
crossterm = "0.28"

# Configuration
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# Text processing
regex = "1.11"
pulldown-cmark = "0.12"

# Vector database
qdrant-client = "1.12"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Web scraping
scraper = "0.21"

# watsonx
watsonx-rs = "0.1"

# Utilities
md5 = "0.7"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.14"
base64 = "0.22"
anyrepair = "0.1"

# Testing
# Removed insta - using regular assertions instead

[package]
name = "anycli"
version.workspace = true
edition.workspace = true
description = "AI-powered Cloud Universal CLI that translates natural language to cloud commands"

[[bin]]
name = "anycli"
path = "src/main.rs"

[dependencies]
# External dependencies
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
colored = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
crossterm = { workspace = true }
qdrant-client = { workspace = true }
uuid = { workspace = true }
scraper = { workspace = true }
md5 = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
base64 = { workspace = true }
anyrepair = { workspace = true }
watsonx-rs = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
pulldown-cmark = { workspace = true }

[dev-dependencies]