[package]
name = "cuc-core"
version.workspace = true
edition.workspace = true
description = "Core traits and types for IBM Cloud CLI AI"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
