[package]
name = "cuc-rag"
version.workspace = true
edition.workspace = true
description = "RAG (Retrieval-Augmented Generation) engine for IBM Cloud CLI AI"

[dependencies]
cuc-core = { path = "../cuc-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
qdrant-client = { workspace = true }
uuid = { workspace = true }
scraper = { workspace = true }
md5 = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
base64 = { workspace = true }
pulldown-cmark = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
