[package]
name = "cuc-vmware"
version.workspace = true
edition.workspace = true
description = "VMware vSphere provider implementation for CUC"

[dependencies]
cuc-core = { path = "../cuc-core" }
async-trait = "0.1"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
